app3/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  namespace: demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      #nodeSelector:
        #role: backend
      containers:
        - name: app3
          image: app-3:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: demo
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
